Change of Article positions

--- a/src/app/front/components/login/login.component.html
+++ b/src/app/front/components/login/login.component.html
@@ -1,13 +1,13 @@
 <!-- Login Page Starts -->
 <section class="loginDetails">
           <div class="row">
-          <div class="col-xs-5 loginLftWrapper" style="align-content: center; align-items: center; margin:25px;">
+          <div class="col-sm-5 loginLftWrapper" style="align-content: center; align-items: center; margin:25px;">
             <img src="../../../../assets/images/packages.png" alt="" class="img-responsive"/>
 
           </div>
-<div class="col-xs-1"></div>
+<div class="col-sm-1"></div>
 
-          <div class="col-xs-5 loginRghtWrapper" style="margin: 5px;size: 50%;background: rgba(255,255,255,0.4);
+          <div class="col-sm-5 loginRghtWrapper" style="margin: 5px;size: 50%;background: rgba(255,255,255,0.4);
     padding: 30px;">
             <div class="formWrapper">
               <h3><span class="licnWrapper"><img src="../../../../assets/images/login_title_icn.png" alt=""
