--- a/src/app/front/components/plan/plan.component.css
+++ b/src/app/front/components/plan/plan.component.css
@@ -154,40 +154,49 @@
 }
 
 .midButton {
-  align-content: center;
-  margin-bottom: 25%;
-  margin-top:25%;
+  margin-bottom: 15px;
   padding: 10px;
   border-radius: 5px;
   border: none;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #000000;
+  background-color: #000;
   transition: 300ms;
   color: #f8c534;
 }
-.midButton p{
-  color:#f8c534;
-  align-content: center;
-  text-align: center;
-  font-size: 25px;
-  margin-bottom: 20px;
+
+
+
+
+.btn-midButton {
+  background: #f8c534;
+  color: #000 !important;
+  border: 1px solid #ffffff !important;
+  margin-top: 20px;
+  font-weight: 600;
+  margin-bottom: 42px;
+
 }
 
-.midButton button{
-  background: #F8C534;
-  color: #000000;
-  font-weight: bold;
-  font-size: x-large;
-  border-radius: 3px;
-  padding: auto;
-  border: 1px solid #ffffff;
-  margin-bottom: 15px;
-}
-
-.midButton button:hover, .midButton button:active, .midButton button:focus {
+.btn-midButton :hover, .btn-midButton :active, .btn-midButton :focus {
   background: transparent;
   border: 1px solid #f8c534 !important;
   color: #f8c534 !important;
 }
+
+#buttonPrice{
+  font-size: 30px;
+  margin: 10px 1px;
+}
+
+#buttonTitle{
+  font-size: 22px;
+  margin: 10px;
+}
+.midButtonContainer{
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
