--- a/src/app/front/components/plan/plan.component.html
+++ b/src/app/front/components/plan/plan.component.html
@@ -6,7 +6,7 @@
   <h1 class="page-heading">All Access Packages</h1>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-4 col-lg-3 col-lg-offset-1 col-sm-4 "
+      <div class="col-md-4 col-lg-4 col-sm-4 "
 
            *ngFor="let plan of plans;">
         <div class="rp-plan">
@@ -31,14 +31,18 @@
 
         </div>
       </div>
-      <div class= "col-lg-offset-1 col-md-2 col-lg-2 col-md-offset-1 col-sm-4">
+      <div class= "col-md-4 col-lg-4  col-sm-4">
+        <div class="midButtonContainer">
         <div class="midButton">
-          <p style="padding-bottom: 2px;"> First Month Free</p>
-          <p style=" padding-top: 2px; padding-bottom: 10px;"> $0 </p>
-          <button *ngIf="!isLogin" style="padding-top: 1px;"(click)="onBtnSubscribeClick(plan)">Find Out More</button>
+          <div id="buttonTitle"> First Month Free</div>
+          <div class="plan-price-container">
+          <div id="buttonPrice" style="margin-bottom: 25px"> $0 </div>
+          </div>
+          <button *ngIf="!isLogin"class="btn-midButton btn-lg btn-primary" (click)="onBtnFreeOfferClick()">Find Out More</button>
         </div>
         </div>
-      <div class="col-md-4 col-lg-3 col-lg-offset-1 col-md-offset-1 col-sm-4 "
+        </div>
+      <div class="col-md-4 col-lg-4 col-sm-4 "
            *ngFor="let plan of plans;">
         <div class="rp-plan">
           <div class="plan-name">{{plan.name}}</div>
