--- a/src/app/front/components/free-offer/free-offer.component.html
+++ b/src/app/front/components/free-offer/free-offer.component.html
@@ -29,7 +29,7 @@
 <div class="freeMonthOffer">
   <h4 style="text-align: center">RotoPros Membership</h4>
   <br>
-  Our first suggestion is to take advantage of the free month offer above. I’d rather you put some cash in your bankroll rather than giving it to us up front. If you already have an existing FanDuel account or just don’t want to create one – simply go to our <a id="membership-link"(click)="onBtnSubscribeClick(plan)"> RotoPros Membership Registration </a> and get signed up today! Remember that our memberships include coverage for all sports!
+  Our first suggestion is to take advantage of the free month offer above. I’d rather you put some cash in your bankroll rather than giving it to us up front. If you already have an existing FanDuel account or just don’t want to create one – simply go to our <a id="membership-link"(click)="onBtnSubscribeClick()"> RotoPros Membership Registration </a> and get signed up today! Remember that our memberships include coverage for all sports!
 <br>
   <br>
 </div>
