--- a/src/app/front/components/plan/plan.component.html
+++ b/src/app/front/components/plan/plan.component.html
@@ -43,7 +43,7 @@
         </div>
         </div>
       <div class="col-md-4 col-lg-4 col-sm-4 "
-           *ngFor="let plan of plans;">
+           *ngFor="let plan of plans1;">
         <div class="rp-plan">
           <div class="plan-name">{{plan.name}}</div>
           <div class="plan-price-container">
