--- a/src/app/front/components/free-offer/free-offer.component.css
+++ b/src/app/front/components/free-offer/free-offer.component.css
@@ -22,8 +22,15 @@ color:#000000;;
 .freeMonthOffer #membership-link {
   color: #1a37f4;
   font-weight: bold;
+  font-style: italic;
   cursor: pointer;
 }
 .freeMonthOffer #membership-link:hover{
   text-decoration: underline;
+
+}
+.freeOfferBold{
+  font-weight: bold;
+  color: #000000;
+
 }
