--- a/src/app/front/components/free-offer/free-offer.component.html
+++ b/src/app/front/components/free-offer/free-offer.component.html
@@ -4,7 +4,7 @@
 <h3 style="text-align: center">Would you like to try out a RotoPros Subscription for free?</h3>
 <br>
 <br>
-  If you have been thinking of joining the RotoPros community but aren’t quite sure – this is your chance to get a month of free membership ($29.99 Value). Just sign up for a new, first time account and make your initial deposit of XXXXXX or more on the FanDuel link below:
+  If you have been thinking of joining the RotoPros community but aren’t quite sure – this is your chance to get a month of free membership ($29.99 Value). Just sign up for a  <a class="freeOfferBold">new, first time account </a> and make your initial  <a class="freeOfferBold">deposit</a> of  <a class="freeOfferBold">XXXXXX</a> or more on the FanDuel link below:
 <br>
   <br>
   <a id="fanduel" href="https://www.fanduel.com/join"> Fanduel </a>
@@ -14,7 +14,7 @@
 <br>
 <br>
 <br>
-  **Remember this must be a NEW depositing account to FanDuel. Existing accounts are not eligible for the free month. Once you have completed the signup on FanDuel from the link above and made your first deposit, shoot an email to harris@rotopros.com letting us know that you have signed up!
+  <a class="freeOfferBold"> **Remember this must be a NEW depositing account to FanDuel. Existing accounts are not eligible for the free month. Once you have completed the signup on FanDuel from the link above and made your first deposit, shoot an email to harris@rotopros.com letting us know that you have signed up!</a>
  <br>
 
   In order to qualify for the free month of RotoPros Membership you simply click through the link above and set up a new depositing account on the site. Then email us at harris@rotopros.com and tell us the username you chose. We will get back to you with a code for a free month of RotoPros membership. It’s that simple.
