--- a/src/app/front/components/free-offer/free-offer.component.html
+++ b/src/app/front/components/free-offer/free-offer.component.html
@@ -7,7 +7,7 @@
   If you have been thinking of joining the RotoPros community but aren’t quite sure – this is your chance to get a month of free membership ($29.99 Value). Just sign up for a  <a class="freeOfferBold">new, first time account </a> and make your initial  <a class="freeOfferBold">deposit</a> of  <a class="freeOfferBold">XXXXXX</a> or more on the FanDuel link below:
 <br>
   <br>
-  <a id="fanduel" href="https://www.fanduel.com/join"> Fanduel </a>
+  <a id="fanduel" href="https://www.fanduel.com/rotopros-subscription"> Fanduel </a>
 <br>
 <br>
   This link includes the latest and best promotional offers from FanDuel.
