--- a/src/app/front/components/home/front-home.component.html
+++ b/src/app/front/components/home/front-home.component.html
@@ -117,7 +117,7 @@
 
           <div class="ylwTpBxInfoWrap">
             <div class="ylwTpBx clearfix">
-              <h3>Latest News <span><img src="../../../../assets/images/blkArow.png"></span></h3>
+              <h3>Latest Newssssss <span><img src="../../../../assets/images/blkArow.png"></span></h3>
               <!-- <p><img src="../../../../assets/images/rght_icn3.png" alt="" class="img-responsive"></p> -->
             </div>
             <div class="ylwTpBxBtm">
