lazy loaded , first page seo, dropzone issue fixed

--- a/src/app/user/components/header/user-header.component.html
+++ b/src/app/user/components/header/user-header.component.html
@@ -136,7 +136,7 @@
                   <!--class="img-responsive"/>-->
                    <img
                      #profilePic
-                     [attr.src]="profileImagePath ? 'https://api.dfsportgod.com/images/'+ profileImagePath : '../../../../assets/images/blank-avatar.jpg'"
+                     [attr.src]="profileImagePath ? serverPath +'images/'+ profileImagePath : '../../../../assets/images/blank-avatar.jpg'"
                      alt=""
                      class="img-responsive"/>
                 </span>
