--- a/src/app/user/components/settings/profile-picture/profile-picture.component.html
+++ b/src/app/user/components/settings/profile-picture/profile-picture.component.html
@@ -7,7 +7,10 @@
         <div class="dUpldBxLft">
           <!-- <dropzone [config]="configUpload" class="file-drop-zone" [message]="'Drop file here'"
                     (error)="onUploadError($event)"
-                    (success)="onUploadSuccess($event)" (sending)="onSending($event)"></dropzone> -->
+                    (success)="onUploadSuccess($event)" (sending)="onSending($event)"></dropzone>   -->
+
+          <dropzone class="dropzone-container file-drop-zone" [config]="config"  fxLayout="row" fxLayoutAlign="start strech" fxFlex="auto" [message]="'Drop file here'" (error)="onUploadError($event)" (success)="onUploadSuccess($event)" (sending)="onSending($event)"></dropzone>
+
         </div>
       </div>
     </div>
